# 6502Assembler

./: .gitignore  6502Assembler  CMakeLists.txt  license.md
include/: addressmodes.h  assembler.h  errorhandler.h  instructions.h  parser.h  readfile.h  tokenizer.h
src/: addressmodes.c  assembler.c  errorhandler.c  instructions.c  main.c  makefile  parser.c  readfile.c  tokenizer.c
test/: filenames.txt  makefile  test.c  test_readfile.c  test_readfile.h
